tests/baselines/reference/S7.8.4_A4.3_T1.errors.txt
S7.8.4_A4.3_T1.ts(15,2): error TS1487: Octal escape sequences are not allowed. Use the syntax '\x01'.


==== S7.8.4_A4.3_T1.ts (1 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    info: NonEscapeSequence is not EscapeCharacter
    es5id: 7.8.4_A4.3_T1
    description: "EscapeCharacter :: DecimalDigits :: 1"
    negative:
      phase: parse
      type: SyntaxError
    flags: [onlyStrict]
    ---*/
    
    
    "\1"
     ~~
!!! error TS1487: Octal escape sequences are not allowed. Use the syntax '\x01'.
    